# localpost

./: Cargo.toml  README.md  tmp_test.sh
.github/workflows/: rust.yml
src/: config.rs  constants.rs  ipc.rs  main.rs
src/commands/: daemon.rs  download.rs  explore.rs  list.rs  mod.rs  stop.rs  upload.rs
src/communication/: ipc.rs  mod.rs  tcp.rs  udp.rs
